crates/hird-check/tests/snapshots/inference__let_annotation.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn main() = let x: Int = 1 in x\")"
---
main : () → Int
