crates/hird-check/tests/snapshots/inference__let_annotation_polymorphic.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r#\"fn main() = let f: a -> a = \\x -> x in (f(1), f(\"hi\"))\"#)"
---
main : () → (Int, String)
