crates/hird-check/tests/snapshots/inference__let_destructures_tuple.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"fn swap(p: (Int, String)) -> (String, Int) = let (a, b): (Int, String) = p in (b, a)\")"
---
swap : (Int, String) → (String, Int)
