crates/hird-check/tests/snapshots/inference__let_polymorphism_identity.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn main() = let id = \\x -> x in id(1)\")"
---
main : () → Int
