crates/hird-check/tests/snapshots/inference__literal_pattern.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"fn describe(n: Int) -> String = match n {\\n\\\n           1 -> \\\"one\\\",\\n\\\n           _ -> \\\"many\\\",\\n\\\n         }\")"
---
describe : Int → String
